# llm_learn

./: .gitignore  README.md  dataset_download_plan.md  makefile  pyproject.toml
configs/: qwen_dpo_1_5b.json  qwen_dpo_7b.json  qwen_dpo_smoke.json  qwen_eval_1_5b.json  qwen_eval_7b.json  qwen_eval_day1_smoke.json  qwen_sft_1_5b.json  qwen_sft_7b.json  qwen_sft_day1_smoke.json
docs/: day01_qwen_smoke_runbook.md
patch/: llm_learn_30day_route_round4_2026-04-21.md  llm_learn_day1_patch_2026-04-21.patch  llm_learn_next_plan.patch  llm_learn_qwen_eval_templates_configs.patch  llm_learn_qwen_next_stage_dpo.patch  llm_learn_qwen_scaffold.patch  next_stage_qwen_plan.md  qwen_eval_templates_configs_report.md  qwen_next_stage_dpo_report.md  qwen_scaffold_summary.md
src/qwen/: README.md  __init__.py  cli.py  config.py  data.py  dpo.py  eval.py
